--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,2 @@
-This is our repository for working on Rotte Luck a reverse survival game where you are the zombie trying to survive.
+This is our repository for working on Rotten Luck, a reverse survival game where you are the zombie trying to survive.
+Things are terribly early build and missing features but are being added.
